refactor(preview): 优化预览渲染器代码结构
- 移除未使用的 smoothCurves 字段和相关逻辑
- 使用 instanceof 模式匹配简化类型转换
- 删除未使用的 RenderSystem 导入
- 移除废弃的 isAnyPreviewActive 方法
- 移除废弃的 handleMouseClick 方法
- 移除废弃的 getActiveNodeIds 方法
- 优化 getLast() 方法使用提高代码可读性